############################### Docs Makefile.am  ##############################

## Do not delete this file!

## Use "automake" to generate Makefile.in

SUBDIRS= Images

Documentsdir= $(prefix)/$(PACKAGE)-$(VERSION)/Documents

HTML_Pages= app-welcome.html \
credits.html \
design-pane.html \
gpl.html \
index.html \
nav-frame.html \
online-help.html

EXTRA_DIST= $(HTML_Pages) master-styles.css

Documents_DATA= $(EXTRA_DIST)

############################### Docs Makefile.am  ##############################
