############################## Schemos Makefile.am  ############################

##  DO NOT DELETE!
##  Use automake to generate new Makefile.in if necessary.

Schemosdir= $(prefix)/$(PACKAGE)-$(VERSION)/Schemos

GIF_Images= ActiveHP_even.gif \
ActiveHP_odd.gif \
ActiveLP_even.gif \
ActiveLP_odd.gif \
Multi-FB.gif \
PassiveBPF-1.gif \
PassiveBPF-2.gif \
PassiveBPF-3.gif \
PassiveBPF-4.gif \
PassiveHP_Cin.gif \
PassiveHP_Lin.gif \
PassiveLP_Cin.gif \
PassiveLP_Lin.gif \
StateVar.gif

EXTRA_DIST= $(GIF_Images)

Schemos_DATA= $(GIF_Images)
