##################################### etc Makefile.am  ###################################

##  DO NOT DELETE!
##  Use automake to generate new Makefile.in

etcdir= $(prefix)/$(PACKAGE)-$(VERSION)/etc

ConfigFile= browserpaths.cfg

ImgFile= Welcome.gif FreeMe.gif

EXTRA_DIST= $(ConfigFile) $(ImgFile)

etc_DATA= $(EXTRA_DIST)
