################################ src Makefile.am  ##############################

##  DO NOT DELETE!
##  Use automake to generate new Makefile.in


bin_PROGRAMS= filterdesigner

filterdesigner_LDADD= $(FoxLibs)

filterdesigner_SOURCES= filterdesigner.cpp \
about.cpp about.h \
appwin.cpp appwin.h \
bandpass.cpp bandpass.h \
besselcons.cpp besselcons.h \
filters.cpp filters.h \
icons.cpp icons.h \
splmsgbox.cpp splmsgbox.h \
defs.h \
freedolphins.h \
locations.h \
messages.h
