############################### Images Makefile.am #############################

## Do not delete!

## Use automake to generate new Makefile.in's

Imagesdir= $(prefix)/$(PACKAGE)-$(VERSION)/Documents/Images

GIF_Images= begin-btn.gif \
cred-off.gif \
cred-on.gif \
data-entries.gif \
diag-off.gif \
diag-on.gif \
file-off.gif \
file-on.gif \
fur-backer.gif \
gpl-off.gif \
gpl-on.gif \
gray-backer.gif \
help-off.gif \
help-on.gif \
main-win-off.gif \
main-win-on.gif \
proj-complete.gif \
proj-start.gif \
projwin-off.gif \
projwin-on.gif \
welcome-screen.gif \
what-off.gif \
what-on.gif

EXTRA_DIST= $(GIF_Images)

Images_DATA= $(GIF_Images)

############################### Images Makefile.am #############################
